<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

     <RelativeLayout
         android:id="@+id/crtalbm_fl2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="#007df7"
         android:padding="5dp" >

		<Button android:id="@+id/mts_btnProfile"
		 		android:layout_width="wrap_content"
		 		android:layout_height="wrap_content"
		 		android:text="@string/lbl_profile"
		 		android:textSize="15sp"
				android:layout_alignParentLeft="true"
				>
		 </Button>
		 
		<Button
		    	android:id="@+id/mts_btnTransferTitle"
		 		android:layout_width="wrap_content"
		 		android:layout_height="wrap_content"
		 		android:text="@string/lbl_transfer"
		 		android:textSize="15sp"
				android:layout_alignParentRight="true"
				>
		 	</Button>
        </RelativeLayout>

 <ViewFlipper
     android:id="@+id/mts_vfflipper"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="10dp" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etusername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textPersonName" >
            </EditText>

            <Button
                android:id="@+id/mts_btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_search" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etEmail"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" >
            </EditText>

            <Button
                android:id="@+id/mts_btnSearchEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_search" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etPhone"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone" >
            </EditText>

            <Button
                android:id="@+id/mts_btnSearchPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_search" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/mts_etAccountNumber"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_accountnumber"
                android:inputType="number" >
            </EditText>

            <Button
                android:id="@+id/mts_btnSearchAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_search" />
        </TableRow>

</TableLayout>

    <ScrollView android:layout_width="fill_parent"
     		android:layout_height="fill_parent">
 <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         >
    
        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etNote"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etAmount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_amount"
                android:inputType="number" >
            </EditText>
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/mts_btnTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_transfer" />
            
        </TableRow>
        <View android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="5dp"/>
        <TableRow
            android:id="@+id/tableRow10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etTransactionId"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_transactionId"
                android:inputType="number" >
            </EditText>
        </TableRow>
          <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            	android:gravity="center_horizontal"
            	>

                <Button
                    android:id="@+id/mts_btnCancelTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_cancel_transfer"
                    android:enabled="true"/>
            </TableRow>
        
        <View android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#CCCCCC"
            android:layout_marginBottom="5dp"/>
        
          <TableRow
            android:id="@+id/tableRow11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etRefundNote"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="textPersonName" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etRefundAmount"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_refundamount"
                android:inputType="number" >
            </EditText>
        </TableRow>
         <TableRow
            android:id="@+id/tableRow13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/mts_etReFundTransId"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_transactionId"
                android:inputType="number" >
            </EditText>
        </TableRow>
        
        <TableRow
                android:id="@+id/tableRow14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            	android:gravity="center_horizontal"
            	>

                <Button
                    android:id="@+id/mts_btnreFundTransfer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_refund_transfer"
                    android:enabled="true"/>
            </TableRow>
    </TableLayout>
    </ScrollView>
</ViewFlipper>
</LinearLayout>